--- a/.github/workflows/python-selenium-test.yml
+++ b/.github/workflows/python-selenium-test.yml
@@ -12,13 +12,11 @@ jobs:
     - name: Install dependencies
       run: pip install chromedriver-autoinstaller selenium pyvirtualdisplay
     - name: Attempt to take screenshot of website
-      env:
-          SCREENSHOT_FILE: ${{ env.FILE }}
       run: python python-selenium-test.py
     - name: Save screenshot
       run: |
           git config --global user.name 'pagvac'
           git config --global user.email 'pagvac@users.noreply.github.com'
-          git add ${{ env.FILE }}
+          git add --all
           git commit -am "Screenshot"
           git push
