--- a/.github/workflows/python-selenium-test.yml
+++ b/.github/workflows/python-selenium-test.yml
@@ -19,8 +19,8 @@ jobs:
           ls -al
     - name: Commit & push screenshot to repo
       run: |
-          git config --global user.name '${context.actor}'
-          git config --global user.email 'github-action-${context.actor}@users.noreply.github.com'
+          git config --global user.name '${{github.actor}}'
+          git config --global user.email '${{github.actor}}@users.noreply.github.com'
           git add --all
           git commit -am "Screenshot"
           git push
